# fastapi-todo-list

./: .gitignore  Dockerfile  README.md  alembic.ini  contrib.md  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: pipeline.yaml
backend/: app.py  database.py  models.py  schemas.py  security.py  settings.py
backend/migrations/: env.py
backend/migrations/versions/: aea93ac44f1e_create_tasks_table.py  c7903faca509_create_users_table.py
backend/routers/: auth.py  tasks.py  users.py
backend/tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_tasks.py  test_users.py
